# Etoscheduler

./: .gitignore  LICENSE  README.md  colup.py  config-manager.py  database-handler.py  et-calculator.py  etl.py  irrigation-app.py  irrigation-scheduler.py  pyproject.toml  weather-service.py
.github/workflows/: ci-python.yml  python-app.yml  python-lint.yml
